# presentation-review-agent

./: .gitignore  README.md  amplify.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
backend/: .bedrock_agentcore.yaml  logging_config.py  main.py
backend/agents/: __init__.py  content_analyzer.py  orchestrator.py  speech_analyzer.py
backend/events/: sse.py
backend/tools/: cost_tracker.py  transcribe.py
doc/: architecture-20260404.drawio  architecture-old.drawio  architecture.drawio  basic_design.md  cdk-migration.md  deploy-guide.md  monitoring-guide.md  observability-setup.md  pricing-update-guide.md  progress.md  s3-lifecycle-guide.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/amplify/: backend.ts
frontend/amplify/agent/: resource.ts
frontend/amplify/agent/runtime/: Dockerfile  logging_config.py  main.py  requirements.txt
frontend/amplify/agent/runtime/agents/: content_analyzer.py  orchestrator.py  speech_analyzer.py
frontend/amplify/storage/: resource.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/analysis/: AnalysisRunner.css  AnalysisRunner.tsx  index.ts
frontend/src/components/layout/: Header.css  Header.tsx
frontend/src/components/result/: AgentCostDisplay.tsx  ImprovementsList.tsx  Result.css  StrengthsList.tsx  SummaryCard.tsx  index.ts
frontend/src/components/upload/: AudioUploader.css  AudioUploader.tsx  index.ts
frontend/src/hooks/: useAudioUpload.ts  useFileDelete.ts  useSSEChat.ts
frontend/src/types/: sse.ts
(+4 files in other folders)
