[project]
name = "presentation-review-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore",
    "bedrock-agentcore-starter-toolkit>=0.2.10",
    "boto3",
    "botocore[crt]",
    "python-dotenv",
    "strands-agents",
]

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 120
